tests/switch_nonexhaustive_enum_bad.stderr
tests/switch_nonexhaustive_enum_bad.hop:8:2: error: HOP2061: missing cases in switch of type E: B
